# arnds

./: README.md
code/: CMakeLists.txt
code/src/: CMakeLists.txt  arnds  main.cpp
code/src/first_order_logic/: and.cpp  and.h  atom.cpp  atom.h  atomic_formula.cpp  atomic_formula.h  base_formula.cpp  base_formula.h  base_term.cpp  base_term.h  binary_connective.cpp  binary_connective.h  common.h  constants.cpp  constants.h  exists.cpp  exists.h  first_order_logic.h  forall.cpp  forall.h  function_term.cpp  function_term.h  iff.cpp  iff.h  imp.cpp  imp.h  main.cpp  not.cpp  not.h  or.cpp  or.h  parser.cpp  parser.h  propositional_logic.h  quantifier.cpp  quantifier.h  resolution.cpp  resolution.h  signature.cpp  signature.h  (+6 more)
code/src/natural_deduction/: rules.cpp  rules.h  solver.cpp  solver.h  solverparser.cpp  solverparser.h  solvertree.cpp  solvertree.h  types.h
